personas/prod/envs/env1/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dataverse
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
spec:
  rules:
    - host: dataverse.qa.km.k8s.zbmed.de
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dataverse
              port:
                number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - dataverse.qa.km.k8s.zbmed.de
      secretName: dataverse-ingress-cert
